src/test/deca/context/valid/without_class/empty_inst.deca
/// Description:
// 	  test syntax empty instruction
// Resultats:
// 	  ok
//
// Historique:
// 	  cree le 14/01/2023
{
    ;
}