src/test/deca/context/invalid/class/already_defined_class_2.deca
// Description:
// 	  Error : two definitions for the same class type
//
// Resultats:
// 	  ALREADY_DEFINED_CLASS: Class A is already defined
//    line 11
// Historique:
// 	  cree le 13/01/2023
class A {}

class A extends A {}